# HopfNet-MHD

./: .gitignore  CMakeLists.txt
docs/: mathematical_foundation.tex  phase1_progress_report.tex
python/hopfnet/: diagnostics.py  etdrk4.py  rhs.py  simulate.py  topology.py
scripts/: relabel_dataset.py  run_ensemble.py  run_production.py  test_bridge.py  verify_dataset.py  verify_physics_run.py
src/: bindings.cpp  etdrk4_coeffs.hpp  fft3d.hpp  hopf_link.hpp  null_finder.hpp  point_cloud.hpp  projection.hpp  spectral_grid.hpp
tests/: test_milestone1.py  test_milestone10.py  test_milestone11.py  test_milestone12.py  test_milestone2.py  test_milestone3.py  test_milestone4.py  test_milestone5.py  test_milestone6_diagnostics.py  test_milestone6_etdrk4.py  test_milestone7.py  test_milestone9.py
